components/Footer/Footer.module.scss
@use "../../styles/theme";

.footer {
  width: 100vw;
  background-color: theme.$primary;
  color: theme.$text_on_primary;
  // background: linear-gradient(98.74deg, #f4b32a 9.75%, #ffe6b2 90.54%);
  background: #f4b32a;
  // clip-path: polygon(
  //   0 16px,
  //   7% 12px,
  //   14% 10px,
  //   21% 10px,
  //   28% 12px,
  //   34% 16px,
  //   40% 24px,
  //   46% 34px,
  //   50% 40px,
  //   54% 46px,
  //   60% 50px,
  //   66% 52px,
  //   70% 52px,
  //   77% 50px,
  //   83% 46px,
  //   89% 42px,
  //   95% 38px,
  //   100% 34px,
  //   100% 100%,
  //   0% 100%
  // );
  padding: 8px 24px 8px 24px;
  display: grid;
  position: relative;
  grid-template-areas:
    "footer-main footer-about-us footer-offerings footer-get-in-touch"
    "footer-main footer-about-us footer-offerings footer-get-in-touch"
    "footer-main footer-about-us footer-offerings footer-get-in-touch"
    "footer-main footer-about-us footer-offerings footer-get-in-touch"
    "footer-copyrights footer-copyrights footer-copyrights footer-copyrights";
  @media (max-width: 768px) {
    padding: 48px 16px 4px 16px;
    grid-template-areas:
      "footer-main footer-main"
      "footer-main footer-main"
      "footer-get-in-touch footer-get-in-touch"
      "footer-get-in-touch footer-get-in-touch"
      "footer-get-in-touch footer-get-in-touch"
      "footer-about-us footer-offerings"
      "footer-about-us footer-offerings"
      "footer-about-us footer-offerings"
      "footer-about-us footer-offerings"
      "footer-copyrights footer-copyrights"
      "footer-copyrights footer-copyrights";

    .offerings {
      ul {
        list-style: none;
      }
    }
  }
  @media (max-width: 500px) {
    padding: 48px 16px 4px 16px;
    grid-template-areas:
      "footer-main"
      "footer-main"
      "footer-get-in-touch"
      "footer-get-in-touch"
      "footer-get-in-touch"
      "footer-about-us"
      "footer-about-us"
      "footer-about-us"
      "footer-about-us"
      "footer-offerings"
      "footer-offerings"
      "footer-offerings"
      "footer-offerings"
      "footer-copyrights"
      "footer-copyrights";
  }
}

.main {
  grid-area: footer-main;
  text-align: left;
  padding-left: 32px;
  div {
    display: block;
  }
  .initiative {
    float: left;
    display: block;
    width: 100%;
    margin-top: 12px;
    a {
      margin-left: 8px;
      font-weight: 600;
    }
  }
}

.getInTouch {
  grid-area: footer-get-in-touch;
  text-align: left;
}

.aboutus {
  grid-area: footer-about-us;
  ul {
    list-style-type: none;
    padding-left: 8px;
  }
  @media (max-width: 768px) {
    text-align: center;
    margin-top: 12px;
    ul {
      padding: 0;
    }
  }
}

.offerings {
  grid-area: footer-offerings;
  ul {
    list-style-type: none;
    padding-left: 8px;
  }
  @media (max-width: 768px) {
    text-align: center;
    margin-top: 12px;
    ul {
      padding: 0;
    }
  }
}
.copyrights {
  grid-area: footer-copyrights;
  display: flex;
  margin-top: 48px;
  @media (max-width: 768px) {
    text-align: center;
    flex-direction: column-reverse;
    margin-top: 12px;
    div {
      text-align: center !important;
      margin-top: 12px;
    }
  }
  div {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    text-align: center;
    :nth-child(1) {
      font-weight: 600;
    }
  }
}

.contactDetails {
  div {
    display: flex;
    flex-direction: column;
    flex-basis: 50%;
    margin: 0 12px;
    :nth-child(1) {
      font-weight: 600;
    }
  }
}

